--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -13,12 +13,15 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@babel/core": "^7.23.3",
+    "@babel/preset-env": "^7.23.3",
     "autoprefixer": "^10.0.1",
     "babel": "^6.23.0",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
     "next": "^14.0.3",
     "postcss": "^8",
+    "swc": "^1.0.11",
     "tailwindcss": "^3.3.0"
   }
 }
